bugs squashed, search bar given a padding

--- a/style/style.css
+++ b/style/style.css
@@ -5,7 +5,9 @@
 
 .search-bar input {
   width: 75%;
+  padding-left: 10px;
 }
+
 
 .video-item img{
   max-width: 64px;
